@@ -906,31 +906,47 @@ makelevel()
 
     {
 	register int u_depth = depth(&u.uz);
-
+	int number_of_special_rooms = rn2(nroom)-room_threshold+1;
+	/* the following code creates approximately the same number of special rooms
+	   with the same probabilities as vanilla code.
+         */
+	do {
+	    switch (rn2(15)) {
+	    default:
 #ifdef WIZARD
 	if(wizard && nh_getenv("SHOPTYPE")) mkroom(SHOPBASE); else
 #endif
 	if (u_depth > 1 &&
 	    u_depth < depth(&medusa_level) &&
 	    nroom >= room_threshold &&
-	    rn2(u_depth) < 3) mkroom(SHOPBASE);
-	else if (u_depth > 4 && !rn2(6)) mkroom(COURT);
-	else if (u_depth > 5 && !rn2(8) &&
-	   !(mvitals[PM_LEPRECHAUN].mvflags & G_GONE)) mkroom(LEPREHALL);
-	else if (u_depth > 6 && !rn2(7)) mkroom(ZOO);
-	else if (u_depth > 7 && !rn2(6)) mkroom(GARDEN);
-	else if (u_depth > 7 && !rn2(6) &&
-	   !(mvitals[PM_RUST_MONSTER].mvflags & G_GONE)) mkroom(ARMORY);
-	else if (u_depth > 8 && !rn2(5)) mkroom(TEMPLE);
-	else if (u_depth > 9 && !rn2(5) &&
-	   !(mvitals[PM_KILLER_BEE].mvflags & G_GONE)) mkroom(BEEHIVE);
-	else if (u_depth > 11 && !rn2(6)) mkroom(MORGUE);
-	else if (u_depth > 12 && !rn2(8)) mkroom(ANTHOLE);
-	else if (u_depth > 14 && !rn2(4) &&
-	   !(mvitals[PM_SOLDIER].mvflags & G_GONE)) mkroom(BARRACKS);
-	else if (u_depth > 15 && !rn2(6)) mkroom(SWAMP);
-	else if (u_depth > 16 && !rn2(8) &&
-	   !(mvitals[PM_COCKATRICE].mvflags & G_GONE)) mkroom(COCKNEST);
+	    rn2(u_depth) < 3) { mkroom(SHOPBASE); break; }
+	    case 0:
+		if (u_depth > 4 && !rn2(6)) { mkroom(COURT); break; }
+	    case 1:
+		if (u_depth > 5 && !rn2(11) &&
+		    !(mvitals[PM_LEPRECHAUN].mvflags & G_GONE)) { mkroom(LEPREHALL); break; }
+	    case 2:
+		if (u_depth > 6 && !rn2(12)) { mkroom(ZOO); break; }
+	    case 3:
+		if (u_depth > 8 && !rn2(11)) { mkroom(TEMPLE); break; }
+	    case 4:
+		if (u_depth > 9 && !rn2(15) &&
+		    !(mvitals[PM_KILLER_BEE].mvflags & G_GONE)) { mkroom(BEEHIVE); break; }
+	    case 5:
+		if (u_depth > 11 && !rn2(25)) { mkroom(MORGUE); break; }
+	    case 6:
+		if (u_depth > 12 && !rn2(27)) { mkroom(ANTHOLE); break; }
+	    case 7:
+		if (u_depth > 14 && !rn2(18) &&
+		    !(mvitals[PM_SOLDIER].mvflags & G_GONE)) { mkroom(BARRACKS); break; }
+	    case 8:
+		if (u_depth > 15 && !rn2(39)) { mkroom(SWAMP); break; }
+	    case 9:
+		if (u_depth > 16 && !rn2(94) &&
+		    !(mvitals[PM_COCKATRICE].mvflags & G_GONE)) { mkroom(COCKNEST); break; }
+	    }
+	} while (--number_of_special_rooms >= 0);
+
     }
 
 #ifdef REINCARNATION
